Fixed login page overflow=hidden.

--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@
 	src: url(assets/fonts/000webfont.ttf);
 }
 
-html,body {
+html, body {
 	font-family: 'Roboto', sans-serif;
-	/*background-color: hsla(0, 0%, 12%, 1);*/
 	background-color: hsl(248, 12%, 13%);
 	color: rgb(236, 236, 236);
 	font-size: 24px;
@@ -50,13 +49,21 @@ p {
 	border-radius: 0.35em;
 }
 
+.loginContainer {
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
 #login {
 	display: block;
 	position: relative;
-	height: 100%;
+	height: auto;
 	width: 75%;
 	max-width: 650px;
 	margin: auto;
+	margin-top: 18px;
+	margin-bottom: 18px;
 	padding: 4px;
 }
 input[type=text], select {
